--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
         </main>
 
         <aside class="sidebar">
-            <h2>Últimas entradas</h2>
-
-            <ul>
-                <li>Soluta fuga! Nihil debiti</li>
-                <li>Is sapiente, nulla, eiu</li>
-                <li>Lorem ipsum dolor sit amet co</li>
-                <li>Rellat sunt nobis sapiente,</li>
-            </ul>
+            <div class="contenedor">
+                <h2>Últimas entradas</h2>
+                
+                <ul>
+                    <li>Soluta fuga! Nihil debiti</li>
+                    <li>Is sapiente, nulla, eiu</li>
+                    <li>Lorem ipsum dolor sit amet co</li>
+                    <li>Rellat sunt nobis sapiente,</li>
+                </ul>
+            </div>
         </aside>
     </div> <!-- Contenido -->
 
